fixes small screen alignment

--- a/rick-and-morty/src/RickAndMorty.scss
+++ b/rick-and-morty/src/RickAndMorty.scss
@@ -127,5 +127,8 @@ table.character-information-form {
     grid-template-areas:
       "polaroid"
       "information";
+    >.character-information-container {
+      margin-left: 0.5em;
+    }
   }
 }
